autogenerate http client from swagger
