# swagger.yml
@@ -3,15 +3,18 @@ consumes:
 - application/json
 definitions:
   GenericError:
-    description: GenericError is a generic error message returned by a server
+    description: GenericError GenericError GenericError GenericError is a generic
+      error message returned by a server
     properties:
       message:
+        description: message
         type: string
         x-go-name: Message
     type: object
-    x-go-package: github.com/Omar-Belghaouti/microservices/handlers
+    x-go-package: github.com/Omar-Belghaouti/microservices/client/models
   Product:
-    description: Product defines the structure for an API product
+    description: Product Product Product Product defines the structure for an API
+      product
     properties:
       description:
         description: the description for the product
@@ -45,17 +48,19 @@ definitions:
     - price
     - sku
     type: object
-    x-go-package: github.com/Omar-Belghaouti/microservices/data
+    x-go-package: github.com/Omar-Belghaouti/microservices/client/models
   ValidationError:
-    description: ValidationError is a collection of validation error messages
+    description: ValidationError ValidationError ValidationError ValidationError is
+      a collection of validation error messages
     properties:
       messages:
+        description: messages
         items:
           type: string
         type: array
         x-go-name: Messages
     type: object
-    x-go-package: github.com/Omar-Belghaouti/microservices/handlers
+    x-go-package: github.com/Omar-Belghaouti/microservices/client/models
 info:
   description: Documentation for Product API
   title: of Product API
@@ -64,7 +69,7 @@ paths:
   /products/:
     get:
       description: Returns a list of products
-      operationId: listProducts
+      operationId: getProducts
       responses:
         "200":
           $ref: '#/responses/productsResponse'
@@ -79,6 +84,45 @@ paths:
         "422":
           $ref: '#/responses/errorValidation'
         "501":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
+  /products/{id}:
+    delete:
+      description: Update a products details
+      operationId: deleteProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "201":
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "501":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
+    get:
+      description: Return a product from the database
+      operationId: getProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+        "404":
           $ref: '#/responses/errorResponse'
       tags:
       - products
@@ -108,29 +152,6 @@ paths:
           $ref: '#/responses/errorResponse'
         "422":
           $ref: '#/responses/errorValidation'
-      tags:
-      - products
-  /products/{id}:
-    delete:
-      description: Update a products details
-      operationId: deleteProduct
-      responses:
-        "201":
-          $ref: '#/responses/noContentResponse'
-        "404":
-          $ref: '#/responses/errorResponse'
-        "501":
-          $ref: '#/responses/errorResponse'
-      tags:
-      - products
-    get:
-      description: Return a product from the database
-      operationId: getProduct
-      responses:
-        "200":
-          $ref: '#/responses/productResponse'
-        "404":
-          $ref: '#/responses/errorResponse'
       tags:
       - products
 produces:
